In the about us page making the logos slide in smaller devices, using different image formats with better compression, setting width and height to avoid layout shifts

--- a/src/app/pages/about-us-page/about-us-page.component.scss
+++ b/src/app/pages/about-us-page/about-us-page.component.scss
@@ -30,6 +30,11 @@ h2 {
     font-weight: 400;
 }
 
+.hungary {
+    width: 100%;
+    height: auto;
+}
+
 .city {
     width: 16px;
     height: 16px;
@@ -95,6 +100,37 @@ h2 {
     }
 }
 
+.logos {
+    &::after {
+        content: '';
+        display: block;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        background: linear-gradient(to right, white 0, transparent 25%),
+            linear-gradient(to left, white 0, transparent 25%);
+    }
+
+    .logos-slide {
+        animation: 35s slide infinite linear;
+
+        img {
+            margin: 0 40px;
+        }
+    }
+}
+
+@keyframes slide {
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(-100%);
+    }
+}
+
 .activities {
     background-color: $monotop-blue;
 
@@ -115,28 +151,15 @@ h2 {
             left: calc(50% - 8px);
         }
     }
-
-    .logos {
-        gap: 64px;
-
-        img {
-            margin-inline: 20%;
-        }
-    }
 }
 
-@include media-breakpoint-only(sm) {
-    .logos {
-        flex-wrap: wrap;
-        gap: 48px;
-    }
-
+@include media-breakpoint-up(sm) {
     h2 {
         margin-top: 64px;
     }
 }
 
-@include media-breakpoint-only(md) {
+@include media-breakpoint-up(md) {
     h2 {
         margin-top: 80px;
     }
@@ -213,6 +236,16 @@ h2 {
         &.city-11 {
             top: calc(41% - 16px);
             left: calc(83% - 16px);
+        }
+    }
+
+    .logos {
+        &::after {
+            content: none;
+        }
+
+        .logos-slide {
+            animation: none;
         }
     }
 }
